--- a/src/components/topstory-section/topstory-section.scss
+++ b/src/components/topstory-section/topstory-section.scss
@@ -2,7 +2,14 @@
   border-radius: 4px;
   display: block;
   position: relative;
-
+  &:hover {
+    .topstory-item__img img {
+      transform: scale(1.1);
+    }
+    h1 {
+      text-decoration-color: inherit;
+    }
+  }
   &::before {
     content: "";
     position: absolute;
@@ -10,6 +17,7 @@
     height: 100%;
     top: 0;
     left: 0;
+    z-index: 3;
     background: linear-gradient(
       180deg,
       rgba(21, 43, 72, 0) 0%,
@@ -17,6 +25,7 @@
     );
   }
   &__img {
+    overflow: hidden;
     aspect-ratio: 809/492;
     @include media-breakpoint-down(sm) {
       height: 420px;
@@ -26,6 +35,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      transition: all 0.3s;
     }
   }
   &__info {
@@ -34,6 +44,12 @@
     bottom: 0;
     left: 0;
     padding: 24px;
+    z-index: 5;
+    h1 {
+      text-decoration: underline;
+      text-decoration-color: transparent;
+      transition: all 0.3s;
+    }
     &-top {
       display: flex;
       align-items: center;
