--- a/src/scss/06-components/_content.scss
+++ b/src/scss/06-components/_content.scss
@@ -11,6 +11,9 @@
   > :last-child {
     margin-bottom: 0;
   }
+  p {
+    margin-bottom: 32px;
+  }
 }
 .h1,
 .o-content h1 {
@@ -62,4 +65,10 @@
 a.p3 {
   text-transform: uppercase;
   font-family: "Roboto Condensed", sans-serif;
+}
+.perex {
+  margin-bottom: 32px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 32px;
 }
