--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -13,9 +13,12 @@
   }
   &__img {
     aspect-ratio: 140/140;
-    min-width: 140px;
+
+    max-width: 33%;
+    flex: 0 0 33%;
     @include media-breakpoint-down(sm) {
       max-width: 100%;
+      flex: 100%;
       margin-bottom: 24px;
       width: 100%;
     }
@@ -28,8 +31,12 @@
   &__info {
     padding-left: 24px;
     padding-top: 14px;
+    max-width: 67%;
+    flex: 0 0 67%;
     @include media-breakpoint-down(sm) {
       padding: 0;
+      max-width: 100%;
+      flex: 100%;
     }
     .h4 {
       text-decoration: underline;
@@ -42,6 +49,7 @@
   display: flex;
   align-items: center;
   flex-wrap: wrap;
+  justify-content: space-between;
   .tag {
     margin-bottom: 10px;
     margin-right: 16px;
