--- a/src/components/topstory-section/topstory-section.scss
+++ b/src/components/topstory-section/topstory-section.scss
@@ -2,14 +2,7 @@
   border-radius: 4px;
   display: block;
   position: relative;
-  &:hover {
-    .topstory-item__img img {
-      transform: scale(1.1);
-    }
-    h1 {
-      text-decoration-color: inherit;
-    }
-  }
+
   &::before {
     content: "";
     position: absolute;
@@ -66,6 +59,16 @@
         margin-top: 8px;
         margin-left: 0;
       }
+    }
+  }
+}
+a.topstory-item {
+  &:hover {
+    .topstory-item__img img {
+      transform: scale(1.1);
+    }
+    h1 {
+      text-decoration-color: inherit;
     }
   }
 }
