add fixes and archive page

--- a/src/components/aside/aside.twig
+++ b/src/components/aside/aside.twig
@@ -12,7 +12,7 @@
         <a class=" tab" data-id="dnes" href="#">Dnes</a>
       </li>
       <li class="">
-        <a class=" tab" data-id="zitra" href="#">zítra.</a>
+        <a class=" tab" data-id="zitra" href="#">zítra</a>
       </li>
     </ul>
     <div class="tabs-wrapper">
@@ -40,216 +40,235 @@
           </ul>
           <div class="filtr-container">
             <div  class="game-box ">
-               <div class="team1">
-                 <div class="name">
-                   <img src="images/ico/1.svg" /><br />Česko
-                 </div>
-               </div>
-               <div class="scoreBox">
-                 <div class="score">0:13</div>
-                 <div class="infoGame">
-                  U23 CHLAPCI
-                  <br>
-                  LIBEREC
-                 </div>
-               </div>
-               <div class="team2">
-                 <div class="name">
-                   <img src="images/ico/4.svg" /> <br />Slovensko
-                 </div>
-               </div>
-               <div class="buttons">
+              <div class="game-box__top">
+                <div class="team1">
+                  <div class="name">
+                    <img src="images/ico/1.svg" /><br />Česko
+                  </div>
+                </div>
+                <div class="scoreBox">
+                  <div class="score">0:13</div>
+                  <div class="infoGame">
+                   U23 CHLAPCI
+                   <br>
+                   LIBEREC
+                  </div>
+                </div>
+                <div class="team2">
+                  <div class="name">
+                    <img src="images/ico/4.svg" /> <br />Slovensko
+                  </div>
+                </div>
+              </div>
+               <ul class="buttons">
+                 <li>
                   <a
                   href="#"
                   target="_blank"
                   class="stream"
                   >stream</a
                 >
+                 </li>
+              <li>
                 <a
                 href="#"
                 target="_blank"
                 class="onlajny"
                 >onlajny.com</a
               >
-                 <a href="#" class="report">Reportáž zápasu</a>
-               </div>
+              </li>
+                <li>
+                  <a href="#" class="report">Reportáž zápasu</a>
+                </li>
+               </ul>
              </div>
              <div  class="game-box ">
-               <div class="team1">
-                 <div class="name">
-                   <img src="images/ico/1.svg" /><br />Česko
-                 </div>
-               </div>
-               <div class="scoreBox">
-                 <div class="score">0:13</div>
-                 <div class="infoGame">
-                  U23 CHLAPCI
-                  <br>
-                  LIBEREC
-                 </div>
-               </div>
-               <div class="team2">
-                 <div class="name">
-                   <img src="images/ico/4.svg" /> <br />Slovensko
-                 </div>
-               </div>
-               <div class="buttons">
-                  <a
-                  href="#"
-                  target="_blank"
-                  class="stream"
-                  >stream</a
-                >
-                <a
-                href="#"
-                target="_blank"
-                class="onlajny"
-                >onlajny.com</a
-              >
+              <div class="game-box__top">
+                <div class="team1">
+                  <div class="name">
+                    <img src="images/ico/1.svg" /><br />Česko
+                  </div>
+                </div>
+                <div class="scoreBox">
+                  <div class="score">0:13</div>
+                  <div class="infoGame">
+                   U23 CHLAPCI
+                   <br>
+                   LIBEREC
+                  </div>
+                </div>
+                <div class="team2">
+                  <div class="name">
+                    <img src="images/ico/4.svg" /> <br />Slovensko
+                  </div>
+                </div>
+              </div>
+             
+               <ul class="buttons">
+                <li>
+                 <a
+                 href="#"
+                 target="_blank"
+                 class="stream"
+                 >stream</a
+               >
+                </li>
+             <li>
+               <a
+               href="#"
+               target="_blank"
+               class="onlajny"
+               >onlajny.com</a
+             >
+             </li>
+               <li>
                  <a href="#" class="report">Reportáž zápasu</a>
-               </div>
+               </li>
+              </ul>
              </div>
              <div  class="game-box ">
-               <div class="team1">
-                 <div class="name">
-                   <img src="images/ico/1.svg" /><br />Česko
-                 </div>
-               </div>
-               <div class="scoreBox">
-                 <div class="score">0:13</div>
-                 <div class="infoGame">
-                  U23 CHLAPCI
-                  <br>
-                  LIBEREC
-                 </div>
-               </div>
-               <div class="team2">
-                 <div class="name">
-                   <img src="images/ico/4.svg" /> <br />Slovensko
-                 </div>
-               </div>
-               <div class="buttons">
-                  <a
-                  href="#"
-                  target="_blank"
-                  class="stream"
-                  >stream</a
-                >
-                <a
-                href="#"
-                target="_blank"
-                class="onlajny"
-                >onlajny.com</a
-              >
+              <div class="game-box__top">
+                <div class="team1">
+                  <div class="name">
+                    <img src="images/ico/1.svg" /><br />Česko
+                  </div>
+                </div>
+                <div class="scoreBox">
+                  <div class="score">0:13</div>
+                  <div class="infoGame">
+                   U23 CHLAPCI
+                   <br>
+                   LIBEREC
+                  </div>
+                </div>
+                <div class="team2">
+                  <div class="name">
+                    <img src="images/ico/4.svg" /> <br />Slovensko
+                  </div>
+                </div>
+              </div>
+             
+               <ul class="buttons">
+                <li>
+                 <a
+                 href="#"
+                 target="_blank"
+                 class="stream"
+                 >stream</a
+               >
+                </li>
+             <li>
+               <a
+               href="#"
+               target="_blank"
+               class="onlajny"
+               >onlajny.com</a
+             >
+             </li>
+               <li>
                  <a href="#" class="report">Reportáž zápasu</a>
-               </div>
+               </li>
+              </ul>
              </div>
              <div  class="game-box ">
-               <div class="team1">
-                 <div class="name">
-                   <img src="images/ico/1.svg" /><br />Česko
-                 </div>
-               </div>
-               <div class="scoreBox">
-                 <div class="score">0:13</div>
-                 <div class="infoGame">
-                  U23 CHLAPCI
-                  <br>
-                  LIBEREC
-                 </div>
-               </div>
-               <div class="team2">
-                 <div class="name">
-                   <img src="images/ico/4.svg" /> <br />Slovensko
-                 </div>
-               </div>
-               <div class="buttons">
-                  <a
-                  href="#"
-                  target="_blank"
-                  class="stream"
-                  >stream</a
-                >
-                <a
-                href="#"
-                target="_blank"
-                class="onlajny"
-                >onlajny.com</a
-              >
+              <div class="game-box__top">
+                <div class="team1">
+                  <div class="name">
+                    <img src="images/ico/1.svg" /><br />Česko
+                  </div>
+                </div>
+                <div class="scoreBox">
+                  <div class="score">0:13</div>
+                  <div class="infoGame">
+                   U23 CHLAPCI
+                   <br>
+                   LIBEREC
+                  </div>
+                </div>
+                <div class="team2">
+                  <div class="name">
+                    <img src="images/ico/4.svg" /> <br />Slovensko
+                  </div>
+                </div>
+              </div>
+             
+               <ul class="buttons">
+              
+             <li>
+               <a
+               href="#"
+               target="_blank"
+               class="onlajny"
+               >onlajny.com</a
+             >
+             </li>
+               <li>
                  <a href="#" class="report">Reportáž zápasu</a>
-               </div>
+               </li>
+              </ul>
              </div>
              <div  class="game-box ">
-               <div class="team1">
-                 <div class="name">
-                   <img src="images/ico/1.svg" /><br />Česko
-                 </div>
-               </div>
-               <div class="scoreBox">
-                 <div class="score">0:13</div>
-                 <div class="infoGame">
-                  U23 CHLAPCI
-                  <br>
-                  LIBEREC
-                 </div>
-               </div>
-               <div class="team2">
-                 <div class="name">
-                   <img src="images/ico/4.svg" /> <br />Slovensko
-                 </div>
-               </div>
-               <div class="buttons">
-                  <a
-                  href="#"
-                  target="_blank"
-                  class="stream"
-                  >stream</a
-                >
-                <a
-                href="#"
-                target="_blank"
-                class="onlajny"
-                >onlajny.com</a
-              >
+              <div class="game-box__top">
+                <div class="team1">
+                  <div class="name">
+                    <img src="images/ico/1.svg" /><br />Česko
+                  </div>
+                </div>
+                <div class="scoreBox">
+                  <div class="score">0:13</div>
+                  <div class="infoGame">
+                   U23 CHLAPCI
+                   <br>
+                   LIBEREC
+                  </div>
+                </div>
+                <div class="team2">
+                  <div class="name">
+                    <img src="images/ico/4.svg" /> <br />Slovensko
+                  </div>
+                </div>
+              </div>
+             
+               <ul class="buttons">
+                <li>
+                 <a
+                 href="#"
+                 target="_blank"
+                 class="stream"
+                 >stream</a
+               >
+                </li>
+           
+               <li>
                  <a href="#" class="report">Reportáž zápasu</a>
-               </div>
+               </li>
+              </ul>
              </div>
              <div  class="game-box ">
-               <div class="team1">
-                 <div class="name">
-                   <img src="images/ico/1.svg" /><br />Česko
-                 </div>
-               </div>
-               <div class="scoreBox">
-                 <div class="score">0:13</div>
-                 <div class="infoGame">
-                  U23 CHLAPCI
-                  <br>
-                  LIBEREC
-                 </div>
-               </div>
-               <div class="team2">
-                 <div class="name">
-                   <img src="images/ico/4.svg" /> <br />Slovensko
-                 </div>
-               </div>
-               <div class="buttons">
-                  <a
-                  href="#"
-                  target="_blank"
-                  class="stream"
-                  >stream</a
-                >
-                <a
-                href="#"
-                target="_blank"
-                class="onlajny"
-                >onlajny.com</a
-              >
-                 <a href="#" class="report">Reportáž zápasu</a>
-               </div>
+              <div class="game-box__top">
+                <div class="team1">
+                  <div class="name">
+                    <img src="images/ico/1.svg" /><br />Česko
+                  </div>
+                </div>
+                <div class="scoreBox">
+                  <div class="score">0:13</div>
+                  <div class="infoGame">
+                   U23 CHLAPCI
+                   <br>
+                   LIBEREC
+                  </div>
+                </div>
+                <div class="team2">
+                  <div class="name">
+                    <img src="images/ico/4.svg" /> <br />Slovensko
+                  </div>
+                </div>
+              </div>
+              
+              
              </div>
-             <a href="#" class="p3 text-center">kompletní rozpis zápasů</a>
+             <a href="#" class="link mt-5 text-center">kompletní rozpis zápasů</a>
           </div>
          
          
