--- a/src/components/aside/aside.scss
+++ b/src/components/aside/aside.scss
@@ -4,6 +4,7 @@
   padding-top: 20px;
   padding-left: 8px;
   padding-right: 8px;
+  padding-bottom: 40px;
   @include media-breakpoint-down(xl) {
     display: none;
   }
@@ -74,7 +75,6 @@
 .team1,
 .team2 {
   width: 210px;
-  padding-left: 20px;
   font-size: 12px;
   line-height: 14px;
   display: flex;
@@ -99,89 +99,65 @@
   font-family: "Roboto Condensed", sans-serif;
   line-height: 14px;
   text-transform: uppercase;
+  position: relative;
+  display: block;
+  text-align: center;
+  text-decoration: underline;
+  padding-left: 28px;
 }
-
+.game-box .buttons a::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -3px;
+  width: 18px;
+  height: 18px;
+  opacity: 0.4;
+  background-repeat: no-repeat !important;
+  background-size: contain !important;
+  display: block;
+}
 .game-box .buttons a:hover {
   text-decoration: none;
 }
 .game-box .buttons .onlajny:before {
-  content: "";
   background: url("../images/ico/online.svg");
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  opacity: 0.4;
-  vertical-align: sub;
-  background-repeat: no-repeat;
-  background-size: contain;
 }
 
-aside .tab-content .game-box .buttons .report:before {
-  content: "";
+.game-box .buttons .report:before {
   background: url("../images/ico/report.svg");
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  opacity: 0.4;
-  vertical-align: sub;
-  background-repeat: no-repeat;
-  background-size: contain;
 }
-aside .tab-content .game-box .buttons .stream:before {
-  content: "";
+.game-box .buttons .stream:before {
   background: url("../images/ico/stream.svg");
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  opacity: 0.4;
-  vertical-align: sub;
-  background-repeat: no-repeat;
-  background-size: contain;
 }
 
+.game-box__top {
+  display: flex;
+  align-items: center;
+}
 /* Style the tab content */
 
 aside .tab-content .game-box .buttons {
-  display: table;
-  width: 100%;
-  margin-top: 15px;
+  margin-top: 24px;
   text-align: center;
-  float: left;
   margin-bottom: 20px;
   border-bottom: 1px solid var(--color-border);
   padding-bottom: 20px;
-}
-.game-box .buttons a {
-  display: table-cell;
-  text-align: center;
-  text-decoration: underline;
-}
-
-aside .tab-content .game-box .buttons .onlajny:before {
-  display: inline-block;
-  vertical-align: sub;
-  margin-right: 8px;
-}
-aside .tab-content .game-box .buttons .report:before {
-  display: inline-block;
-  vertical-align: sub;
-  margin-right: 8px;
-}
-aside .tab-content .game-box .buttons .stream:before {
-  content: "";
-  display: inline-block;
-  vertical-align: sub;
-  margin-right: 8px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  li {
+    padding: 0 8px;
+    margin-bottom: 16px;
+  }
 }
 
 aside .tab-content .game-box .team {
-  display: table;
   width: 100%;
-  font-family: roboto;
   font-size: 12px;
   line-height: 2.4;
   text-align: left;
-  color: #000000;
 }
 
 aside .tab-content .game-box .team .score {
@@ -191,15 +167,19 @@ aside .tab-content .game-box .team .score {
 }
 .scoreBox {
   font-family: "Roboto Condensed", sans-serif;
-  width: 50%;
+  max-width: 50%;
+  flex: 0 0 50%;
   font-size: 35px;
   font-weight: 700;
+  padding: 0 8px;
 }
 .team1,
 .team2 {
-  width: 25%;
+  max-width: 25%;
+  flex: 0 0 25%;
   font-size: 12px;
   font-weight: 500;
+  padding: 0 8px;
 }
 .team1 img,
 .team2 img {
@@ -208,7 +188,6 @@ aside .tab-content .game-box .team .score {
 .team1,
 .team2,
 .scoreBox {
-  float: left;
   text-align: center;
 }
 .scoreBox .ext {
