--- a/src/scss/05-vendor/_vendor.select2.scss
+++ b/src/scss/05-vendor/_vendor.select2.scss
@@ -1,5 +1,3 @@
 /*! purgecss start ignore */
-.text-red {
-  color: var(--color-red);
-}
+@import '../../node_modules/select2/dist/css/select2';
 /*! purgecss end ignore */
