--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -210,8 +210,7 @@
       padding-bottom: 8px;
       margin-bottom: 8px;
     }
-    svg {
-    }
+
     a {
       margin-left: 8px;
       font-size: 12px;
@@ -233,6 +232,7 @@
   margin-bottom: 44px;
   img {
     margin-right: 8px;
+    width: 32px;
   }
   a {
     text-transform: uppercase;
