--- a/src/scss/06-components/_content.scss
+++ b/src/scss/06-components/_content.scss
@@ -25,6 +25,15 @@
   h1 {
     margin-bottom: 32px;
   }
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin-top: 24px;
+    margin-bottom: 24px;
+    text-transform: unset;
+  }
   img {
     width: 100%;
     height: auto;
@@ -100,6 +109,13 @@
     font-size: 32px;
     line-height: 125%;
   }
+}
+.h2,
+.o-content h2 {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 32px;
+  font-family: "Roboto Condensed", sans-serif;
 }
 .h3,
 .o-content h3 {
