--- a/src/components/article-section/article-section.twig
+++ b/src/components/article-section/article-section.twig
@@ -45,6 +45,7 @@
         kulturních památkách, a získat tak úplný obraz o této krásné oblasti.
       </p>
     </div>
+    {% include "@components/photogallery/photogallery.twig" %}
     <div class="hp-table__top">
       <h3 class="h3 text-red mb-2">DALŠÍ ČLÁNKY</h3>
       <a href="#" class="link mb-2"> archiv článků </a>
