--- a/src/components/albums-section/albums-section.twig
+++ b/src/components/albums-section/albums-section.twig
@@ -1,5 +1,5 @@
 <section class="albums-section">
-  <h1 class="h1 mb-8 text-red">Fotogalerie</h1>
+  <h1 class="h1 mb-8 text-red">Albums</h1>
   <div class="header-section__row">
     <form action="" class="header-section__form">
       <div class="row gy-6">
@@ -14,26 +14,8 @@
             </select>
           </label>
         </div>
+
         <div class="col-sm-5">
-          <label class="o-select header-section__label">
-            <select class="js-select">
-              <option>Měsíc</option>
-              <option>leden</option>
-              <option>únor</option>
-              <option>březen</option>
-              <option>duben</option>
-              <option>květen</option>
-              <option>červen</option>
-              <option>červenec</option>
-              <option>srpen</option>
-              <option>září</option>
-              <option>říjen</option>
-              <option>listopad</option>
-              <option>prosinec</option>
-            </select>
-          </label>
-        </div>
-        <div class="col-sm-10">
           <label class="header-section__input">
             <input type="text" placeholder="Hledat v článcích..." />
           </label>
