--- a/src/components/aside/aside.scss
+++ b/src/components/aside/aside.scss
@@ -30,8 +30,11 @@
   text-decoration: none;
 }
 .filtr-container {
-  display: flex;
+  display: none;
   flex-direction: column;
+}
+.filtr-container.active {
+  display: flex;
 }
 .tab.active {
   border-bottom: 2px solid var(--color-red);
@@ -44,25 +47,6 @@
   li {
     padding: 0 1px;
     margin-bottom: 2px;
-    a {
-      font-weight: 700;
-      font-size: 12px;
-      line-height: 24px;
-      font-family: "Roboto Condensed", sans-serif;
-      text-transform: uppercase;
-      background-color: var(--color-border);
-      height: 28px;
-      display: flex;
-      align-items: center;
-      padding-left: 7px;
-      padding-right: 7px;
-      text-decoration: none;
-      border-radius: 4px;
-    }
-    a.active {
-      color: var(--color-light);
-      background-color: var(--color-red);
-    }
   }
 }
 .scoreBox .infoGame {
@@ -414,65 +398,6 @@ aside .aside-box .nav-list .dropdown-item:hover:after {
   padding: 25px;
   border: 1px solid green;
 }
-.filterizr-control {
-  overflow: hidden;
-  .filterizr-filter {
-    float: left;
-  }
-  .filtr-search {
-    float: right;
-  }
-}
-.filterizr-filter {
-  overflow: hidden;
-  li {
-    list-style: none;
-    float: left;
-    padding: 10px;
-    margin: 0;
-    border: 1px solid #440000;
-    margin-right: 10px;
-    &.filtr-active {
-      background-color: yellow;
-    }
-  }
-}
-
-.filtr-container {
-  .filtr-item {
-    position: relative;
-    width: calc((100% / 3) - (4% * 3));
-    padding: 2%;
-    .item-image-wrapper {
-      position: relative;
-      border: 10px solid white;
-      border-bottom: 30px solid white;
-      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
-        0 6px 20px 0 rgba(0, 0, 0, 0.19);
-      &::before {
-        content: "";
-        display: block;
-        position: relative;
-        padding-top: 100%;
-        width: 100%;
-      }
-    }
-    .item-image {
-      display: block;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-    }
-    p {
-      position: absolute;
-      font-size: 14px;
-      bottom: -20px;
-      opacity: 0;
-    }
-  }
-}
 
 .show-more aside {
   display: block;
@@ -482,4 +407,53 @@ aside .aside-box .nav-list .dropdown-item:hover:after {
   right: 0;
   top: 52px;
   background: #fff;
+}
+
+[role="tab"] {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 24px;
+  font-family: "Roboto Condensed", sans-serif;
+  text-transform: uppercase;
+  background-color: var(--color-border);
+  height: 28px;
+  display: flex;
+  align-items: center;
+  padding-left: 7px;
+  padding-right: 7px;
+  text-decoration: none;
+  border-radius: 4px;
+  padding-top: 0;
+  padding-bottom: 0;
+  border: none;
+  cursor: pointer;
+}
+[role="tab"]:hover {
+  color: var(--color-light);
+  background-color: var(--color-red);
+}
+[role="tab"][aria-selected="true"] {
+  color: var(--color-light);
+  background-color: var(--color-red);
+}
+
+[role="tab"]:hover span.focus,
+[role="tab"]:focus span.focus,
+[role="tab"]:active span.focus {
+  color: var(--color-light);
+  background-color: var(--color-red);
+}
+
+.automatic {
+  display: flex;
+}
+.filtr-container {
+  display: block;
+  .link {
+    margin-top: 24px;
+    display: block;
+  }
+}
+.filtr-container.is-hidden {
+  display: none;
 }
