--- a/src/components/albums-section/albums-section.twig
+++ b/src/components/albums-section/albums-section.twig
@@ -30,7 +30,7 @@
     <div class="col-xxl-4 col-lg-6 col-md-4 p-3">
       <a
         class="albums-section__item"
-        href="https://mizza-cz.github.io/MS-Hokejbal_Liberec/build/04.0_albums.html"
+        href="https://mizza-cz.github.io/MS-Hokejbal_Liberec/build/04.0_gallery.html"
       >
         <div class="albums-section__img">
           <img
@@ -47,7 +47,7 @@
     <div class="col-xxl-4 col-lg-6 col-md-4 p-3">
       <a
         class="albums-section__item"
-        href="https://mizza-cz.github.io/MS-Hokejbal_Liberec/build/04.0_albums.html"
+        href="https://mizza-cz.github.io/MS-Hokejbal_Liberec/build/04.0_gallery.html"
       >
         <div class="albums-section__img">
           <img
@@ -64,7 +64,7 @@
     <div class="col-xxl-4 col-lg-6 col-md-4 p-3">
       <a
         class="albums-section__item"
-        href="https://mizza-cz.github.io/MS-Hokejbal_Liberec/build/04.0_albums.html"
+        href="https://mizza-cz.github.io/MS-Hokejbal_Liberec/build/04.0_gallery.html"
       >
         <div class="albums-section__img">
           <img
@@ -81,7 +81,7 @@
     <div class="col-xxl-4 col-lg-6 col-md-4 p-3">
       <a
         class="albums-section__item"
-        href="https://mizza-cz.github.io/MS-Hokejbal_Liberec/build/04.0_albums.html"
+        href="https://mizza-cz.github.io/MS-Hokejbal_Liberec/build/04.0_gallery.html"
       >
         <div class="albums-section__img">
           <img
@@ -98,7 +98,7 @@
     <div class="col-xxl-4 col-lg-6 col-md-4 p-3">
       <a
         class="albums-section__item"
-        href="https://mizza-cz.github.io/MS-Hokejbal_Liberec/build/04.0_albums.html"
+        href="https://mizza-cz.github.io/MS-Hokejbal_Liberec/build/04.0_gallery.html"
       >
         <div class="albums-section__img">
           <img
