--- a/src/scss/06-components/_content.scss
+++ b/src/scss/06-components/_content.scss
@@ -5,7 +5,7 @@
   }
   .table {
     @include media-breakpoint-down(lg) {
-      width: max-content;
+      min-width: 400px;
     }
   }
   &::after {
