--- a/src/components/gallery-section/gallery-section.scss
+++ b/src/components/gallery-section/gallery-section.scss
@@ -1,8 +1,6 @@
 .gallery-section {
-  background-color: var(--color-light);
-  border-radius: 4px;
-  padding: 40px 32px;
-  margin-bottom: 20px;
+  .gallery {
+  }
   .gallery a {
     position: relative;
     display: flex;
