--- a/src/components/albums-section/albums-section.twig
+++ b/src/components/albums-section/albums-section.twig
@@ -1,4 +1,4 @@
-<section class="albums-section">
+<section class="albums-section section">
   <h1 class="h1 mb-8 text-red">Albums</h1>
   <div class="header-section__row">
     <form action="" class="header-section__form">
