--- a/src/components/archive-section/archive-section.twig
+++ b/src/components/archive-section/archive-section.twig
@@ -1,4 +1,4 @@
-<section class="archive-section">
+<section class="archive-section section">
   <h1 class="h1 mb-8 text-red">Články</h1>
   <div class="header-section__row">
     <form action="" class="header-section__form">
