--- a/src/components/partners-section/partners-section.twig
+++ b/src/components/partners-section/partners-section.twig
@@ -1,4 +1,4 @@
-<section class="partners-section">
+<section class="partners-section section">
   <h1 class="h1 mb-8 text-red">Partneři</h1>
 
   <h2 class="h2 mb-3 text-red">Hlávní partner</h2>
