--- a/src/scss/06-components/_content.scss
+++ b/src/scss/06-components/_content.scss
@@ -116,6 +116,10 @@
   font-size: 32px;
   line-height: 32px;
   font-family: "Roboto Condensed", sans-serif;
+  @include media-breakpoint-down(lg) {
+    font-size: 24px;
+    line-height: 125%;
+  }
 }
 .h3,
 .o-content h3 {
