--- a/src/scss/07-elements/_elements.hr.scss
+++ b/src/scss/07-elements/_elements.hr.scss
@@ -1,6 +1,6 @@
 hr {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  margin-top: 2rem !important;
+  margin-bottom: 2rem !important;
   border: 0;
   border-top: 1px solid var(--color-border);
 }
