--- a/src/components/match-section/match-section.twig
+++ b/src/components/match-section/match-section.twig
@@ -12,7 +12,7 @@
             <p>ZIMNÍ STADION ČESKÁ TŘEBOVÁ</p>
             <div class="scoreBox">13:0</div>
             <span>(1:1, 2:0, 1:0)</span>
-            <h3>ČESKÁ REPUBLIKA - SLOVENSKO</h3>
+            <h3>ČESKÁ REPUBLIKA U16 - SLOVENSKO U15</h3>
           </div>
         </div>
         <div class="col-sm-3 col-6 order-last order-sm-0">
@@ -56,7 +56,7 @@
 
       <h4 class="team-section__title mb-1">
         <img src="images/ico/cz.svg" loading="lazy" />
-        Česká republika
+        Česká republika U16
       </h4>
       <p>
         Šťovíček (Skalický) – Hálek (C), Jizba, Hnyk, Kovařík, Molnár, Maule,
@@ -65,7 +65,7 @@
       </p>
       <h4 class="team-section__title mb-1">
         <img src="images/ico/sk.svg" loading="lazy" />
-        Slovensko
+        Slovensko U15
       </h4>
       <p>
         Keprt (Kurivyál) – De Fin, Král, Krejčí, Popek, Dufek, Bolek, Randis,
