--- a/src/components/statistics-section/statistics-section.twig
+++ b/src/components/statistics-section/statistics-section.twig
@@ -295,7 +295,15 @@
               >jméno</a
             >
           </th>
-          <th></th>
+          <th>
+            <a
+              data-bs-toggle="tooltip"
+              data-bs-placement="top"
+              data-bs-title="post"
+              href="#"
+              ><strong>P</strong></a
+            >
+          </th>
           <th>
             <a
               data-bs-toggle="tooltip"
