--- a/src/components/matches-section/matches-section.twig
+++ b/src/components/matches-section/matches-section.twig
@@ -1,5 +1,40 @@
 <section class="matches-section section">
-  <h1 class="h1 text-red">Rozpis a výsledky</h1>
+  <h1 class="h1 text-red">Rozpis a výsledky - JUNIORKY U20</h1>
+
+  <div class="matches-section__wrapper">
+    <h2 class="h2">Pátek 7.5.2023</h2>
+    <div class="match d-flex align-items-center row m-0 p-3">
+      <div
+        class="match__logos col-12 col-xl-3 col-xxl-2 mb-4 mb-xl-0 justify-content-center"
+      >
+        <div class="match__logo">
+          <img src="images/ico/cz.svg" loading="lazy" />
+        </div>
+        <div class="match__logo">
+          <img src="images/ico/sk.svg" loading="lazy" />
+        </div>
+      </div>
+      <div class="match__team col-12 col-xl mb-4 mb-xl-0">
+        <p class="p3 mb-1">1.kolo | Zimní stadion Česká Třebová</p>
+        <h3 class="h4">Česká republika - Slovensko</h3>
+      </div>
+      <div class="match__result col-xl-2 col-12 mb-4 mb-xl-0 text-center">
+        18:00
+      </div>
+      <div
+        class="col-12 col-lg col-xxl-3 text-center mb-4 mb-lg-0 text-xl-left"
+      >
+        <ul class="match__links">
+          <li>
+            <a href="#"> {% include "@images/online.svg" %} </a>
+          </li>
+          <li>
+            <a href="#"> {% include "@images/report.svg" %} </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
   <div class="matches-section__wrapper">
     <h2 class="h2">Pátek 28.6.2019</h2>
     <div class="match d-flex align-items-center row m-0 p-3">
@@ -17,8 +52,8 @@
         <p class="p3 mb-1">1.kolo | Zimní stadion Česká Třebová</p>
         <h3 class="h4">Česká republika - Slovensko</h3>
       </div>
-      <div class="match__result col-xl-1 col-12 mb-4 mb-xl-0 text-center">
-        11:0
+      <div class="match__result col-xl-2 col-12 mb-4 mb-xl-0 text-center">
+        1:0
       </div>
       <div
         class="col-12 col-lg col-xxl-3 text-center mb-4 mb-lg-0 text-xl-left"
@@ -51,8 +86,8 @@
         <p class="p3 mb-1">1.kolo | Zimní stadion Česká Třebová</p>
         <h3 class="h4">Česká republika - Slovensko</h3>
       </div>
-      <div class="match__result col-xl-1 col-12 mb-4 mb-xl-0 text-center">
-        11:0
+      <div class="match__result col-xl-2 col-12 mb-4 mb-xl-0 text-center">
+        0:0
       </div>
       <div
         class="col-12 col-lg col-xxl-3 text-center mb-4 mb-lg-0 text-xl-left"
@@ -85,8 +120,8 @@
         <p class="p3 mb-1">1.kolo | Zimní stadion Česká Třebová</p>
         <h3 class="h4">Česká republika - Slovensko</h3>
       </div>
-      <div class="match__result col-xl-1 col-12 mb-4 mb-xl-0 text-center">
-        11:0
+      <div class="match__result col-xl-2 col-12 mb-4 mb-xl-0 text-center">
+        1:2
       </div>
       <div
         class="col-12 col-lg col-xxl-3 text-center mb-4 mb-lg-0 text-xl-left"
@@ -119,8 +154,8 @@
         <p class="p3 mb-1">1.kolo | Zimní stadion Česká Třebová</p>
         <h3 class="h4">Česká republika - Slovensko</h3>
       </div>
-      <div class="match__result col-xl-1 col-12 mb-4 mb-xl-0 text-center">
-        11:0
+      <div class="match__result col-xl-2 col-12 mb-4 mb-xl-0 text-center">
+        1:3
       </div>
       <div
         class="col-12 col-lg col-xxl-3 text-center mb-4 mb-lg-0 text-xl-left"
@@ -147,7 +182,7 @@
         <p class="p3 mb-1">1.kolo | Zimní stadion Česká Třebová</p>
         <h3 class="h4">Česká republika - Slovensko</h3>
       </div>
-      <div class="match__result col-xl-1 col-12 mb-4 mb-xl-0 text-center">
+      <div class="match__result col-xl-2 col-12 mb-4 mb-xl-0 text-center">
         1:0
       </div>
       <div
@@ -181,7 +216,7 @@
         <p class="p3 mb-1">1.kolo | Zimní stadion Česká Třebová</p>
         <h3 class="h4">Česká republika - Slovensko</h3>
       </div>
-      <div class="match__result col-xl-1 col-12 mb-4 mb-xl-0 text-center">
+      <div class="match__result col-xl-2 col-12 mb-4 mb-xl-0 text-center">
         11:0
       </div>
       <div
@@ -215,8 +250,8 @@
         <p class="p3 mb-1">1.kolo | Zimní stadion Česká Třebová</p>
         <h3 class="h4">Česká republika - Slovensko</h3>
       </div>
-      <div class="match__result col-xl-1 col-12 mb-4 mb-xl-0 text-center">
-        11:0
+      <div class="match__result col-xl-2 col-12 mb-4 mb-xl-0 text-center">
+        1:3
       </div>
       <div
         class="col-12 col-lg col-xxl-3 text-center mb-4 mb-lg-0 text-xl-left"
@@ -243,8 +278,8 @@
         <p class="p3 mb-1">1.kolo | Zimní stadion Česká Třebová</p>
         <h3 class="h4">Česká republika - Slovensko</h3>
       </div>
-      <div class="match__result col-xl-1 col-12 mb-4 mb-xl-0 text-center">
-        1:0
+      <div class="match__result col-xl-2 col-12 mb-4 mb-xl-0 text-center">
+        2:6
       </div>
       <div
         class="col-12 col-lg col-xxl-3 text-center mb-4 mb-lg-0 text-xl-left"
