add fixes gallery

--- a/src/components/gallery-section/gallery-section.scss
+++ b/src/components/gallery-section/gallery-section.scss
@@ -1,5 +1,9 @@
 .gallery-section {
   .gallery {
+    figure {
+      width: 100%;
+      display: block;
+    }
   }
   .gallery a {
     position: relative;
