--- a/src/components/gallery-section/gallery-section.twig
+++ b/src/components/gallery-section/gallery-section.twig
@@ -27,66 +27,42 @@
     </form>
   </div>
   <div class="gallery row g-4 js-gallery mb-5">
-    <figure class="col-12 col-sm-6 col-md-4 col-xxl-3">
-      <a href="images/content/post.jpeg" data-size="1024x1024">
-        <img src="images/content/post.jpeg" loading="lazy" alt="" />
-      </a>
-    </figure>
-    <figure class="col-12 col-sm-6 col-md-4 col-xxl-3">
-      <a href="images/content/2.jpeg" data-size="1024x1024">
-        <img src="images/content/2.jpeg" loading="lazy" alt="" />
-      </a>
-    </figure>
-    <figure class="col-12 col-sm-6 col-md-4 col-xxl-3">
-      <a href="images/content/post.jpeg" data-size="1024x1024">
-        <img src="images/content/post.jpeg" loading="lazy" alt="" />
-      </a>
-    </figure>
-    <figure class="col-12 col-sm-6 col-md-4 col-xxl-3">
-      <a href="images/content/2.jpeg" data-size="1024x1024">
-        <img src="images/content/2.jpeg" loading="lazy" alt="" />
-      </a>
-    </figure>
-    <figure class="col-12 col-sm-6 col-md-4 col-xxl-3">
-      <a href="images/content/2.jpeg" data-size="1024x1024">
-        <img src="images/content/2.jpeg" loading="lazy" alt="" />
-      </a>
-    </figure>
-    <figure class="col-12 col-sm-6 col-md-4 col-xxl-3">
-      <a href="images/content/2.jpeg" data-size="1024x1024">
-        <img src="images/content/2.jpeg" loading="lazy" alt="" />
-      </a>
-    </figure>
-    <figure class="col-12 col-sm-6 col-md-4 col-xxl-3">
-      <a href="images/content/post.jpeg" data-size="1024x1024">
-        <img src="images/content/post.jpeg" loading="lazy" alt="" />
-      </a>
-    </figure>
-    <figure class="col-12 col-sm-6 col-md-4 col-xxl-3">
-      <a href="images/content/post.jpeg" data-size="1024x1024">
-        <img src="images/content/post.jpeg" loading="lazy" alt="" />
-      </a>
-    </figure>
-    <figure class="col-12 col-sm-6 col-md-4 col-xxl-3">
-      <a href="images/content/post.jpeg" data-size="1024x1024">
-        <img src="images/content/post.jpeg" loading="lazy" alt="" />
-      </a>
-    </figure>
-    <figure class="col-12 col-sm-6 col-md-4 col-xxl-3">
-      <a href="images/content/post.jpeg" data-size="1024x1024">
-        <img src="images/content/post.jpeg" loading="lazy" alt="" />
-      </a>
-    </figure>
-    <figure class="col-12 col-sm-6 col-md-4 col-xxl-3">
-      <a href="images/content/post.jpeg" data-size="1024x1024">
-        <img src="images/content/post.jpeg" loading="lazy" alt="" />
-      </a>
-    </figure>
-    <figure class="col-12 col-sm-6 col-md-4 col-xxl-3">
-      <a href="images/content/post.jpeg" data-size="1024x1024">
-        <img src="images/content/post.jpeg" loading="lazy" alt="" />
-      </a>
-    </figure>
+    <div class="col-12 col-sm-6 col-md-4 col-xxl-3">
+      <figure>
+        <a href="images/content/post.jpeg" data-size="1024x1024">
+          <img src="images/content/post.jpeg" loading="lazy" alt="" />
+        </a>
+      </figure>
+    </div>
+
+    <div class="col-12 col-sm-6 col-md-4 col-xxl-3">
+      <figure>
+        <a href="images/content/post.jpeg" data-size="1024x1024">
+          <img src="images/content/post.jpeg" loading="lazy" alt="" />
+        </a>
+      </figure>
+    </div>
+    <div class="col-12 col-sm-6 col-md-4 col-xxl-3">
+      <figure>
+        <a href="images/content/post.jpeg" data-size="1024x1024">
+          <img src="images/content/post.jpeg" loading="lazy" alt="" />
+        </a>
+      </figure>
+    </div>
+    <div class="col-12 col-sm-6 col-md-4 col-xxl-3">
+      <figure>
+        <a href="images/content/post.jpeg" data-size="1024x1024">
+          <img src="images/content/post.jpeg" loading="lazy" alt="" />
+        </a>
+      </figure>
+    </div>
+    <div class="col-12 col-sm-6 col-md-4 col-xxl-3">
+      <figure>
+        <a href="images/content/post.jpeg" data-size="1024x1024">
+          <img src="images/content/post.jpeg" loading="lazy" alt="" />
+        </a>
+      </figure>
+    </div>
   </div>
   <div class="row">
     <div class="col-12">
