--- a/src/components/base/base.twig
+++ b/src/components/base/base.twig
@@ -60,7 +60,8 @@
   </head>
   <body>
     <div class="base">
-      {% include "@components/header/header-mob.twig" %}
+      {% include "@components/popup-window/popup-window.twig" %} {% include
+      "@components/header/header-mob.twig" %}
       <div class="container">
         <div class="wrapper">
           {% include "@components/header/header.twig" %}
