--- a/src/components/popup-window/popup-window.twig
+++ b/src/components/popup-window/popup-window.twig
@@ -1,14 +1,16 @@
 <div class="bts-popup" role="alert">
   <div class="container">
     <div class="bts-popup-container">
-      <a href="#" class="popup-img">
-        <img src="images/content/popup.png" alt=""
-      /></a>
+      <div class="popup-content">
+        <a href="#" class="popup-img">
+          <img src="images/content/popup.png" alt=""
+        /></a>
 
-      <div class="bts-popup-button">
-        <a href="#0">Více</a>
+        <div class="bts-popup-button">
+          <a href="#0">Více</a>
+        </div>
+        <a href="#0" class="bts-popup-close img-replace">Close</a>
       </div>
-      <a href="#0" class="bts-popup-close img-replace">Close</a>
     </div>
   </div>
 </div>
