--- a/src/components/popup-window/popup-window.scss
+++ b/src/components/popup-window/popup-window.scss
@@ -12,7 +12,7 @@
   top: 0;
   height: 100%;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(#152b48, 0.75);
   opacity: 0;
   visibility: hidden;
   -webkit-transition: opacity 0.3s 0s, visibility 0s 0.3s;
@@ -30,19 +30,29 @@
     height: 100%;
   }
 }
+.popup-content {
+  background-color: #152b48;
+  position: relative;
+  padding: 40px 80px;
+}
 .popup-img {
-  aspect-ratio: 1400/840;
+  max-width: 800px;
+  height: auto;
   display: block;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 24px;
 }
 .bts-popup-container {
+  max-width: 1200px;
   position: relative;
   width: 100%;
   margin: auto;
-  height: 100%;
-  top: 0%;
+  height: 80%;
+  top: 10%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
   background: transparent;
   border-radius: none;
   text-align: center;
